--- a/pub/css/pure.css
+++ b/pub/css/pure.css
@@ -786,7 +786,9 @@ td, th {
 .pure-table-odd td {
 	background-color:#f2f2f2
 }
-.pure-table-striped tr:nth-child(2n-1)td {
+
+/* nth-child selector for modern browsers */
+.pure-table-striped tr:nth-child(2n) td {
 	background-color:#f2f2f2
 }
 .pure-table-bordered td {
