--- a/views/fnf.ejs
+++ b/views/fnf.ejs
@@ -9,6 +9,6 @@
 	Feed not found
 </h1>
 <p>
-<a class="button" href="javascript:history.back()">Go Back</a>
+<a class="button" href="javascript:history.back();">Go Back</a>
 </div>
 </body></html>
